--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,27 @@
 body {
     font-family: roboto;
     font-size: 14px;
+	margin:0px;
 }
+
+a, button, h1, h2, h3, h4, h5, h6, input, ol, p, textarea, th, ul {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font: inherit;
+    vertical-align: baseline;
+    background: transparent;
+    list-style: none;
+}
+
+
 .border {
     border: 5px solid #F5F0F0;
 }
 #map_canvas {
-    width: 99%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
 }
 #controls {
     border: 1px solid #AAAAAA;
@@ -52,3 +66,74 @@ body {
     top: 0px;
     right: 0px;
 }
+
+.searchbox {
+    position: relative;
+    background: #fff;
+    border-radius: 2px;
+    box-sizing: border-box;
+    width: 400px;
+    height: 48px;
+    border-bottom: 1px solid transparent;
+    padding: 12px 104px 11px 64px;
+    transition-property: background,box-shadow;
+    transition-duration: 0.3s;
+}
+
+.searchbox-shadow {
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
+}
+
+#omnibox {
+    position: absolute;
+    left: 0px;
+    margin: 16px;
+    top: 0px;
+    z-index: 10;
+    transition: left 0.5s;
+}
+
+#omnibox .tactile-searchbox-input {
+    color: inherit;
+    font-size: 15px;
+    margin: 0 !important;
+    padding: 0 !important;
+    outline: 0;
+    width: 100%;
+    height: 24px !important;
+    line-height: 24px;
+    transition-property: color;
+    transition-duration: 0.3s;
+}
+.searchbox-searchbutton-container {
+    position: absolute;
+    right: 54px;
+    top: 0;
+}
+.searchbox-searchbutton-container::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 10px;
+    border-left: 1px solid #ddd;
+    height: 28px;
+}
+.searchbox-searchbutton-container::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 10px;
+    border-left: 1px solid #ddd;
+    height: 28px;
+}
+
+.searchbox-searchbutton::before {
+    content: '';
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url(../images/search.png);
+    background-size: 72px 24px;
+}
+
+
