--- a/css/style.css
+++ b/css/style.css
@@ -155,4 +155,13 @@ a, button, h1, h2, h3, h4, h5, h6, input, ol, p, textarea, th, ul {
     text-align: center;
 	width: 400px;
 	padding: 5px 0 5px 0;
+	cursor: default;
+}
+
+.bulkTextArea{
+	width: 100%;
+    height: 80px;
+	border: 1px solid #CECECE;
+    padding: 5px;
+    box-shadow: 0px 2px 3px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
 }
